# kasa-crypto

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.railway  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_registry_assets.py  0003_deposit_credit_revision.py  0004_ledger_accounts_system_unique.py  0004_ledger_system_unique.py  0005_deposit_addr_unique.py  0005_deposit_addresses_lower_unique.py  0006_withdrawal_signed_tx.py  0007_nft_holdings.py  0008_nft_mint_requests.py  0009_nft_deposits.py  0010_nft_withdrawals.py  0011_rate_limit_events.py  0012_withdrawal_unmined_since.py  0013_mint_unmined_since.py  0014_nft_sweeps.py
backend/app/: __init__.py  db.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: admin.py  auth.py  deposits.py  faucet.py  me.py  nfts.py  registry.py  transactions.py  transfers.py  users.py  wallet.py  withdrawals.py
backend/app/chain/: client.py  types.py
backend/app/core/: addresses.py  config.py  enums.py  errors.py  hd_wallet.py  security.py
backend/app/models/: __init__.py  base.py  tables.py
backend/app/schemas/: __init__.py  admin.py  auth.py  deposit.py  faucet.py  ledger.py  nft.py  registry.py  transfer.py  user.py  wallet.py  withdrawal.py
backend/app/services/: __init__.py  admin_service.py  auth_service.py  errors.py  idempotency.py  ledger.py  limits.py  nft_art.py  nft_service.py  rate_limit.py  registry_projection.py  transfer_service.py  wallet_service.py  withdrawal_service.py
backend/app/types/: __init__.py  amount.py
backend/scripts/: export_openapi.py  seed_assets.py
backend/tests/: conftest.py  support.py  test_admin_reserves.py  test_amounts.py  test_chain_client.py  test_demo_seed.py  test_enums.py  test_faucet_service.py  test_hd_wallet.py  test_idempotency_isolation.py  test_ledger_service.py  test_limits.py  test_nft_art.py  test_nft_minter.py  test_nft_service.py  test_nft_sweeper.py  test_nft_watcher.py  test_nft_withdrawer.py  test_overspend_lock.py  test_rate_limit.py  test_registry.py  test_routes_smoke.py  test_security.py  test_transfer_service.py  test_watcher.py  test_withdrawal_validation.py  test_withdrawer.py  test_worker_main.py
backend/worker/: _nonce.py  main.py  nft_minter.py  nft_sweeper.py  nft_watcher.py  nft_withdrawer.py  watcher.py  withdrawer.py
contracts/: hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: DemoCollectible.sol  DemoToken.sol
contracts/scripts/: deploy.ts
contracts/test/: DemoCollectible.spec.ts  DemoToken.spec.ts
docs/: api_architecture.md  architecture.md  db_model.md  decisions.md  design_system.md  frontend_queries.md  types_and_registry.md  work_split.md
frontend/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
frontend/mockups/: dashboard.html
frontend/src/api/: client.ts  enums.ts  queries.ts  schema.gen.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(app)/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: DepositNotifier.tsx
frontend/src/components/layout/: AuthGate.tsx  MobileNav.tsx  Sidebar.tsx  SidebarContent.tsx  TopBar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Field.tsx  KasaLogo.tsx  MoneyText.tsx  Select.tsx  (+4 more)
frontend/src/lib/: assets.ts  cn.ts  fonts.ts
infra/: docker-compose.yml  e2e.sh
infra/dev/: README.md  local-chain-down.sh  local-chain-up.sh  testnet-down.sh  testnet-up.sh
(+7 files in other folders)
